cabal-version:      2.4
name:               streaming-async
version:            0.1.0.0

library
  hs-source-dirs:   src
  exposed-modules:  Streaming.Async
  ghc-options: -W -Wall
  build-depends:    base
                  , async
                  , stm
                  , stm-chans
                  , streaming

benchmark streaming-async-bench
  main-is:          bench.hs
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , async
                  , criterion
                  , stm
                  , streaming
                  , streaming-async
  ghc-options: -W -Wall -threaded -with-rtsopts=-N
